// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Help command describe pleb commands 1`] = `
"Commands:
\`?help\` - Print a handy help message.
\`?languages\` - Print my core repository's language statistics.
\`?limits\` - Display the song queue's submission limits.
\`?now-playing\` - Reveal the current song in the queue (or my best guess).
\`?ping\` - Ping my host server to check latency.
\`?sr [?url]\` - Submit a song to the queue.
\`?t\` - Start a typing indicator.
\`?version\` - Display the bot's current codebase version.
\`?video [url]\` - Reply with the video title and duration.
"
`;

exports[`Help command describes all commands 1`] = `
"Commands:
\`?config\` - Read and modify config options.
    \`?config get <command_prefix>\` - Get the value of a configuration setting.
    \`?config set <command_prefix> [value]\` - Set the value of a configuration setting.
    \`?config unset <command_prefix>\` - Reset the value of a configuration setting to default.
\`?help\` - Print a handy help message.
\`?languages\` - Print my core repository's language statistics.
\`?limits\` - Display the song queue's submission limits.
\`?now-playing\` - Reveal the current song in the queue (or my best guess).
\`?ping\` - Ping my host server to check latency.
\`?quo\` - Administrative commands to manage the song queue.
    \`?quo setup [channel]\` - Set a channel as the 'queue' channel.
    \`?quo teardown\` - Deletes and un-sets the current queue.
    \`?quo blacklist [?user]\` - Show the list of blacklisted users, or add a user to the blacklist.
    \`?quo whitelist [user]\` - Allows a previously-blacklisted user to make song requests.
    \`?quo open\` - Start accepting song requests to the queue.
    \`?quo close\` - Stop accepting song requests to the queue.
    \`?quo limit <entry-duration | cooldown | count> [?value]\` - Set a limit value on the queue. (Time in seconds, where applicable)
    \`?quo stats\` - Print statistics on the current queue.
    \`?quo restart\` - Empty the queue and start a fresh queue session.
\`?sr [?url]\` - Submit a song to the queue.
\`?t\` - Start a typing indicator.
\`?version\` - Display the bot's current codebase version.
\`?video [url]\` - Reply with the video title and duration.
"
`;
